--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conferencia Bs As</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary barraNavegacion">
             <div class="container-fluid">
-              <img class="barraNavegacion_icono" src="/img/codoacodo.png" alt="">
+              <img class="barraNavegacion_icono" src="img/codoacodo.png" alt="">
               <a class="navbar-brand barraNavegacion_item-principal" href="#">Conf Bs As</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/img/ba1.jpg" class="d-block w-100" alt="...">
+                <img src="img/ba1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h1>Conf Bs As</h1>
                   <p class="fw-medium">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
@@ -52,10 +52,10 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/img/ba2.jpg" class="d-block w-100" alt="...">
+                <img src="img/ba2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/img/ba3.jpg" class="d-block w-100" alt="...">
+                <img src="img/ba3.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -75,7 +75,7 @@
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
-                <img src="/img/steve.jpg" class="card-img-top imagenCard" alt="...">
+                <img src="img/steve.jpg" class="card-img-top imagenCard" alt="...">
                 <div class="card-body">
                   <a href="#" class="btn btn-warning btn-sm">JavaScript</a>
                   <a href="#" class="btn btn-primary btn-sm">React</a>
@@ -86,7 +86,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/bill.jpg" class="card-img-top imagenCard" alt="...">
+                <img src="img/bill.jpg" class="card-img-top imagenCard" alt="...">
                 <div class="card-body">
                   <a href="#" class="btn btn-warning btn-sm">JavaScript</a>
                   <a href="#" class="btn btn-primary btn-sm">React</a>
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/ada.jpeg" class="card-img-top imagenCard" alt="...">
+                <img src="img/ada.jpeg" class="card-img-top imagenCard" alt="...">
                 <div class="card-body">
                   <a href="#" class="btn btn-secondary btn-sm">Negocios</a>
                   <a href="#" class="btn btn-danger btn-sm">Startups</a>
@@ -112,7 +112,7 @@
         <section class=" conoceMas">
           <div class="row">
             <div class="col-6">
-              <img src="/img/honolulu.jpg" alt="" class="conoceMas_imagen">
+              <img src="img/honolulu.jpg" alt="" class="conoceMas_imagen">
             </div>
             <div class="col-6 conoceMas_info">
               <h5>Bs As - Octubre</h5>
